# llm_classifier

./: .gitignore  README.md  classifier.py  input.csv  output.csv  prompt.py  pyproject.toml
llm_classifier/: classifier.py
tests/: test_classifier.py  test_helpers.py
