[project]
name = "llm-classifier"
version = "0.1.0"
description = "Classify text data from a CSV file with LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "litellm>=1.57.5",
    "nest-asyncio>=1.6.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
]
